tests/NormalTests/paczka1/small_fuzzy/83609188.err
Error in line 5: dhCGSq S468 53,0
Error in line 7: tvqFcky4yj S121 5,0
Error in line 15: j6RI76H A772 19,3
